FCFIELDS-72 Upgrade to Vert.x v5.0.6 (#69)
* FCFIELDS-72 Upgrade to Vert.x v5.0.6

* FCFIELDS-72 Fix sonarcloud issue

* FCFIELDS-72 Fix insecure dependencies